# cp5

./: README.md  config.py  pyproject.toml
data/: vacancies.json
src/: fuction.py  hhruapi.py  main.py  saver.py  work_vacancies.py
tests/: test_funcion.py  test_hhruapi.py  test_work_vacancies.py
